report/grammer.txt
start   : INT MAIN LPAREN RPAREN LBRACE statement_list RBRACE
for :  FOR LPAREN check_for new_scope statement gen_new_label cond SEMI unary RPAREN LBRACE gen_new_label statement_list cond_label RBRACE uncheck_for delete_scope
check_for   : empty
uncheck_for : empty
cond_label  : empty
new_scope   : empty
delete_scope    : empty
new_tab : empty
gen_new_label   : empty
switch  : SWITCH LPAREN new_scope switch_expr RPAREN LBRACE labeled_statement_list RBRACE delete_scope
switch_expr : ID
            | ICONST
labeled_statement_list  : labeled_statement labeled_statement_list
labeled_statement_list  : empty
labeled_statement   : CASE gen_new_label const_expr COLON new_scope statement_list delete_scope
labeled_statement   :  DEFAULT COLON gen_new_label new_scope statement_list delete_scope
labeled_statement   :  labeled_statement BREAK SEMI
const_expr  : ICONST
            | CCONST
statement_list  : statement statement_list
statement_list  : empty
statement   : unary
            | assign
            | declaration
            | for
            | switch
empty   :assign : ID EQUALS expr SEMI
assign  : ID EQUALS CCONST SEMI
cond    : ID LT ICONST
        | ID LE ICONST
        | ID GE ICONST
        | ID GT ICONST
        | ID LT ID
        | ID LE ID
        | ID GE ID
        | ID GT ID
        | ID NE ICONST
        | ID NE ID
        | ID NE FCONST
        | ICONST NE ID
        | ICONST NE ICONST
        | ID LE FCONST
        | ID GE FCONST
        | ID GT FCONST
        | ID LT FCONST
        | ICONST LE ICONST
        | ICONST GE ICONST
        | ICONST GT ICONST
        | ICONST LT ICONST
        | FCONST LE FCONST
        | FCONST GE FCONST
        | FCONST GT FCONST
        | FCONST LT FCONST
        | ID EQ ID
        | ID EQ ICONST
        | ID EQ FCONST
        | ICONST EQ ID
        | FCONST EQ ID
        | ICONST EQ ICONST
        | FCONST EQ FCONST
cond    : ID
unary   : PLUSPLUS ID
        | MINUSMINUS ID
unary   : ID PLUSPLUS
        | ID MINUSMINUS
declaration     : types vee SEMI
                | types arr SEMI
types   : INT
        | FLOAT
        | DOUBLE
        | CHAR
        | LONG
        | REGISTER
vee : vee COMMA vee
vee : ID
vee : init
init    : ID EQUALS expr
init    : ID EQUALS CCONST
arr : ID open_bracket
open_bracket    : LBRACKET ICONST RBRACKET
                | LBRACKET ICONST RBRACKET open_bracket
expr    : expr PLUS term
        | expr MINUS term
expr    : term
term    : term TIMES factor
        | term DIVIDE factor
term    : factor
factor  : ID
factor  : ICONST
factor  : FCONST
